--- a/style/style.css
+++ b/style/style.css
@@ -16,14 +16,14 @@ body {
   align-items: center;
 }
 
-.navbar{
-  align-self: flex-start;
+.navbar {
+  display: flex;
+  justify-content: center;
 }
 
 img {
-  margin-top: 5px;
-  margin-left: 5px;
-  width: 140px;
+  width: 200px;
+
 }
 
 #logo {
@@ -31,26 +31,39 @@ img {
   margin : 0;
 }
 
-#logo-coinbase{
+#logo-coinbase {
   width: 100px;
   margin : 0;
 }
 
 form {
   display: inline;
+  width: 200px;
+  justify-content: center;
 }
 
-.footer{
-  margin-bottom: 50px;
+#submit_button {
+  width: 200px;
+  margin-top: 20px;
+  background-color: black;
+  border: none;
+  padding: 8px 24px;
+  color: white;
 }
- .btn-primary{
+
+#submit_button::focus {
+  border-color: none;
+}
+
+
+ .btn-primary {
   background-color: #0469A2;
   width: 300px;
   height: 50px;
   margin-bottom: 10px;
  }
 
-.fab{
+.fab {
   color: white;
 }
 
