--- a/style/Transfer.css
+++ b/style/Transfer.css
@@ -23,23 +23,6 @@ body {
 
 img {
   width: 200px;
-
-}
-
-#logo {
-  width: 113px;
-  margin : 0;
-}
-
-#logo-coinbase {
-  width: 100px;
-  margin : 0;
-}
-
-form {
-  display: inline;
-  width: 200px;
-  justify-content: center;
 }
 
 #submit_button {
@@ -51,19 +34,12 @@ form {
   color: white;
 }
 
-#submit_button::focus {
-  border-color: none;
+.form {
+  display: inline;
+  width: 200px;
+  justify-content: center;
 }
 
-
- .btn-primary {
-  background-color: #0469A2;
-  width: 300px;
-  height: 50px;
-  margin-bottom: 10px;
- }
-
-.fab {
-  color: white;
+#inlineFormCustomSelectPref{
+  width:70px;
 }
-
