--- a/style/style.css
+++ b/style/style.css
@@ -5,27 +5,33 @@
 
 body {
   width: 370px;
-  height: 400px;
-  background-color: #F8F8F8;
+  height: 480px;
+  background: linear-gradient(159.93deg, #FEDA00 11.18%, #FEDA00 76.29%, rgba(254, 218, 0, 0) 71.29%, rgba(254, 218, 0, 0) 71.31%);
+  background-position: bottom;
   font-family: 'Red Hat Display', sans-serif;
   font-size: 20px;
 }
+
 .container{
   width: 100%;
-  height: 100%;
+  height: calc(100% - 80px);
   position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
+
 .navbar {
   display: flex;
   justify-content: center;
+  height: 80px;
 }
+
 img {
-  width: 200px;
+  width: 180px;
 }
+
 form {
   display: inline;
   width: 200px;
@@ -39,4 +45,13 @@ form {
   border: none;
   padding: 8px 24px;
   color: white;
+}
+
+.form-control:focus {
+  border-color: black !important;
+  box-shadow: none !important;
+}
+
+a:hover {
+  text-decoration: none !important;
 }
