--- a/style/get_amount.css
+++ b/style/get_amount.css
@@ -5,11 +5,11 @@
 }
 
 #inlineFormCustomSelectPref{
-  width:70px;
+  width:50px;
 }
 
 h5 {
-  font-family: 'Red Hat Text';
+  font-family: 'Red Hat Display';
   font-weight: 700;
 }
 
