front end in progress

--- a/style/sell_and_withdraw.css
+++ b/style/sell_and_withdraw.css
@@ -1,13 +1,41 @@
-.form {
-  display: inline;
-  width: 200px;
+.little-circle {
+  width: 80px;
+  height: 80px;
+  stroke-width: 2;
+  left: 0;
+  position: absolute;
+  top: 0;
+}
+
+.little-circle-card {
+  width: 80px;
+  height: 80px;
+  display: flex;
+  align-items: center;
   justify-content: center;
+  position: relative;
 }
 
-#inlineFormCustomSelectPref{
-  width:70px;
+.steps {
+  width: 280px;
+  justify-content: space-between;
+  align-items: center;
 }
 
+.steps p {
+  font-size: 20px;
+  font-family: 'Red Hat Text';
+  z-index: 2;
+  margin: 0;
+}
+
+.steps circle {
+  fill: rgba(255, 255, 255, 0.653);
+  stroke: white;
+  z-index: 1;
+}
+
+/* 
 #loader-2 span{
   display: inline-block;
   width: 20px;
@@ -43,4 +71,4 @@
     -o-transform: translateY(-20px);
     transform: translateY(-20px);
   }
-}
+} */
