--- a/style/get_amount.css
+++ b/style/get_amount.css
@@ -31,9 +31,9 @@ h5 {
 }
 
 span {
-  font-size: 20px;
+  font-size: 25px;
   font-weight: 700;
-  margin: 0;
+  margin-left: 2px;
   z-index: 2;
   font-family: 'Red Hat Text';
 }
@@ -72,12 +72,4 @@ span {
 
 .white-circle:hover {
   stroke-dasharray: 15, 310;
-}
-
-#little-euro span {
-  font-size: 12px;
-  color: rgba(0, 0, 0, 0.719);
-  margin: 0;
-  z-index: 2;
-  font-family: 'Red Hat Text';
 }
