--- a/style/get_amount.css
+++ b/style/get_amount.css
@@ -23,6 +23,10 @@ h5 {
   margin-bottom: 5px;
 }
 
+.account-card span i {
+  font-size: 16px;
+}
+
 .balance {
   font-size: 25px;
   font-weight: 700;
