--- a/style/get_amount.css
+++ b/style/get_amount.css
@@ -27,6 +27,10 @@ h5 {
   font-size: 16px;
 }
 
+.eur-convert {
+  font-size: 8px;
+}
+
 .balance {
   font-size: 25px;
   font-weight: 700;
@@ -34,7 +38,32 @@ h5 {
   z-index: 2;
 }
 
-span {
+.convert {
+  font-size: 14px;
+  font-weight: 700;
+  margin: 0;
+}
+
+.rate {
+  margin-top: 8px;
+}
+
+#egal-sign {
+  font-size: 14px;
+  font-weight: 700;
+  margin: 0;
+  margin-right: 4px;
+}
+
+#btc-span-small {
+  font-size: 14px;
+  font-weight: 700;
+  margin: 0;
+  margin-left: 4px;
+}
+
+
+#btc-span {
   font-size: 25px;
   font-weight: 700;
   margin-left: 2px;
@@ -76,4 +105,8 @@ span {
 
 .white-circle:hover {
   stroke-dasharray: 15, 310;
+}
+
+#submit_button{
+  margin-top: 8px;
 }
