circles smaller header in progress

--- a/style/get_amount.css
+++ b/style/get_amount.css
@@ -9,13 +9,20 @@
 }
 
 h5 {
-  font-family: 'Red Hat Display';
-  font-weight: 700;
+  font-family: 'Red Hat Display' !important;
+  font-size: 30px !important;
+  /* font-weight: 700 !important; */
+  text-align: left !important;
+}
+
+#header-span {
+  color: white;
+  background-color: black;
 }
 
 .account-card {
-  width: 150px;
-  height: 150px;
+  width: 120px;
+  height: 120px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -36,6 +43,14 @@ h5 {
   font-weight: 700;
   margin: 0;
   z-index: 2;
+}
+
+#euro-span {
+  font-size: 25px;
+  font-weight: 700;
+  margin-left: 2px;
+  z-index: 2;
+  font-family: 'Red Hat Text';
 }
 
 .convert {
@@ -72,8 +87,8 @@ h5 {
 }
 
 .circle-shape {
-  width: 150px;
-  height: 150px;
+  width: 120px;
+  height: 120px;
   left: 0;
   position: absolute;
   top: 0;
