--- a/style/sell_and_withdraw.css
+++ b/style/sell_and_withdraw.css
@@ -35,7 +35,7 @@
   z-index: 1;
 }
 
-/* 
+
 #loader-2 span{
   display: inline-block;
   width: 20px;
@@ -71,4 +71,4 @@
     -o-transform: translateY(-20px);
     transform: translateY(-20px);
   }
-} */
+}
