--- a/style/transfer_only.css
+++ b/style/transfer_only.css
@@ -1,4 +1,4 @@
-.little-circle {
+/*.little-circle {
   width: 80px;
   height: 80px;
   stroke-width: 2;
@@ -34,3 +34,4 @@
   stroke: white;
   z-index: 1;
 }
+*/
