replace sell_and_withdaw popup name by payment

--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,6 @@
 @import url(./sign_in.css);
 @import url(./get_amount.css);
-@import url(./sell_and_withdraw.css);
+@import url(./payment.css);
 @import url(./transfer_only.css);
 @import url(./transfer_done.css);
 
