--- a/style/style.css
+++ b/style/style.css
@@ -54,4 +54,13 @@ form {
 
 a:hover {
   text-decoration: none !important;
+  color: white;
+}
+
+.dashboard{
+  color: rgba(0,0,0,0.5);
+}
+
+.dashboard:hover {
+  color: rgba(0,0,0,1);
 }
